@@ -79,6 +79,7 @@ All validation rules have been updated to comply with the SysMLv2 2024-12 specif
 - https://github.com/eclipse-syson/syson/issues/1075[#1075] [import] Fix a ClassCastException thrown while importing a model with a name conflict.
 - https://github.com/eclipse-syson/syson/issues/1091[#1091] [export] Fix `FeatureReferenceExpression` export for elements that should be exported as qualified names.
 Exporting a SysML model containing a `FeatureReferenceExpression` now correctly produces qualified names where it should.
+- https://github.com/eclipse-syson/syson/issues/1077[#1077] [explorer] Fix navigation in case of project containing both sysml and non-sysml model elements
 
 === Improvements
 
